fix: adjust scrollbar issue

--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .header {
-  height: 95vh;
+  height: 90vh;
   background-image: linear-gradient(
     to right bottom,
     rgba(126, 213, 111, 0.8),
